# depg

./: Cargo.toml
fixtures/ts/: tsconfig.json
fixtures/ts/app-src/: index.tsx  utils.ts
fixtures/ts/components/: banner.tsx  button.tsx  index.tsx
fixtures/ts/src/: index.ts
src/: main.rs  resolve.rs  ts_config.rs
