[package]
name = "depg"
version = "0.1.0"
authors = ["Shane Osbourne <shane.osbourne8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_ecma_parser = "0.45.6"
swc_ecma_ast = "0.37.3"
swc_common = { version = "0.10.9", features = ["tty-emitter"] }
swc = "0.2.7"